# arm-rs-rtos

./: Cargo.toml  README.md  memory.x  openocd.cfg
.cargo/: config.toml
examples/: hello.rs  rtic-tick.rs
testsuite/: Cargo.toml
testsuite/src/: lib.rs
testsuite/tests/: test.rs
